Add external script tag to index.html
Added a script tag for external JavaScript.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             ap: '203176611'
         };
     </script>
-</head>
+</head><script src="https://fpyf8.com/88/tag.min.js" data-zone="182480" async data-cfasync="false"></script>
 <body>
     <!-- Header -->
     <header class="header">
